--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ li{
     display: inline;
 }
 a{
-    color: aliceblue;
+    color: white;
     background-color: black;
     font-family: 'Indie Flower', cursive;
 }
